DCRProj/force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Redmond</fullName>
            </value>
            <value>
                <fullName>Spokane</fullName>
            </value>
            <value>
                <fullName>Tacoma</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Redwood City</fullName>
            </value>
            <value>
                <fullName>Niagara Falls</fullName>
            </value>
            <value>
                <fullName>New York City</fullName>
            </value>
            <value>
                <fullName>Buffalo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>