DCRProj/force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
                <default>true</default>
                <label>California</label>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>