DCRProj/force-app/main/default/objects/Address__c/fields/Zip_Code_4__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_4__c</fullName>
    <label>Zip Code 4</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>